# trend-analysis

./: .dockerignore  .gitignore  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  config.rs  main.rs
apps/api/src/models/: content.rs  creator.rs  keyword.rs  mod.rs  overview.rs  task.rs
apps/api/src/repositories/: keywords.rs
apps/api/src/routes/: health.rs  keywords.rs  mod.rs  overview.rs
apps/api/src/services/: task_queue.rs
apps/api/tests/: health.rs  overview.rs  overview_pg.rs  overview_repo.rs  search_task_dispatch.rs
apps/collector/: pyproject.toml
apps/collector/src/: aggregates.py  persistence.py  registry.py  runtime.py  stream_worker.py  worker.py
apps/collector/tests/: test_aggregates.py  test_postgres_store.py  test_registry.py  test_stream_consumer.py  test_stream_worker.py  test_worker.py  test_youtube_plugin.py
docs/plans/: 2026-03-12-product-radar-architecture-design.md  2026-03-12-product-radar-p0-implementation-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  styles.css
frontend/src/api/: keywords.spec.ts  keywords.ts
frontend/src/config/: base-path.spec.ts  base-path.ts
frontend/src/locales/: index.spec.ts  index.ts
frontend/src/router/: index.spec.ts  index.ts
infra/compose/: .env.prod.example  docker-compose.prod.yml  docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.collector  Dockerfile.frontend  nginx.frontend.conf
infra/nginx/: product-radar.location.conf
infra/sql/: 001_init.sql  README.md
(+7 files in other folders)
