[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.89"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.15"
